styling is in place now

--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     <div class="container">
       <header>
       <h1>Joshu's Zen Koans</h1>
+      <div class="links">
+      <ul>
+        <li><a href="#">Who is Joshu?</a></li>
+        <li><a href="#">What is Zen?</a></li>
+        <li><a href="#">What is a Koan?</a></li>
+      </ul>
+      </div>
       </header>
+      <button onclick="newKoan()">click for a koan</button>
         <section id="koanDisplay">
           <!-- Koan will show up here -->
         </section>
-        <button onclick="newKoan()">click for a koan</button>
 
       <footer>
-        <ul>
-          <li><a href="#">Who is Joshu?</a></li>
-          <li><a href="#">What is Zen?</a></li>
-          <li><a href="#">What is a Koan?</a></li>
-        </ul>
+        Created by <a href="http://www.samuelsycamore.com" target="_blank">Sam Sycamore</a>
       </footer>
     </div>
 
