--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
       <h1>Joshu's Zen Koans</h1>
       <div class="links">
       <ul>
-        <li><a href="#">Who is Joshu?</a></li>
-        <li><a href="#">What is Zen?</a></li>
-        <li><a href="#">What is a Koan?</a></li>
+        <li><a href="#" onclick="return toggleMe('para1')">Who is Joshu?</a> <span id="toggle-icon">+</span></li>
+        <li><a href="#" id="zen">What is Zen?</a></li>
+        <li><a href="#" id="koan">What is a Koan?</a></li>
       </ul>
       </div>
       </header>
-      <button onclick="newKoan()">click for a koan</button>
+      <section class="infoContainer">
+        <p id="para1" style="display: none;">
+           Joshu was a Zen Buddhist monk. He's also my dog.
+        </p>
+      </section>
+
+      <button id="koanBtn">click for a koan</button>
         <section id="koanDisplay">
           <!-- Koan will show up here -->
         </section>
@@ -28,6 +34,7 @@
         Created by <a href="http://www.samuelsycamore.com" target="_blank">Sam Sycamore</a>
       </footer>
     </div>
+
 
       <script src="script.js" /></script>
 
